--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: adaptive_container
-description: A new Flutter package project.
-version: 0.0.1
-author:
-homepage:
+description: Flutter Package used to achieve a bootstrap-like behavior in your flutter project (Web, Desktop, Mobile(Android, IOS)).
+version: 0.0.2
+#author: "Zeus Cajurao"
+homepage: https://github.com/alnaughty/adaptive_container
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
